...
        viewController?.hideLoadingIndicator()
    }
    
    func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            viewController?.showFinalResults(alertModel:
                AlertModel(title: "Этот раунд окончен!",
                message: makeResultMessage(),
                buttonText: "Сыграть ещё раз",
                completion: {[weak self] in
                self?.restartGame()
                
            }))
...
